# threadbender

./: .gitignore  Cargo.toml
crates/clothoid/: Cargo.toml
crates/clothoid/src/: fresnel.rs  fresnel_int.rs  lib.rs  spirals.wgsl  spline.rs  util.rs
crates/euler_spirals/: Cargo.toml
crates/euler_spirals/src/: lib.rs  spirals.wgsl
crates/spline-test/: Cargo.toml
crates/spline-test/src/: display.rs  grid.rs  handle.rs  lib.rs  line.rs  pointer.rs  renderer.rs  viewport.rs
crates/spline-test/src/gputil/: asset.rs  mod.rs
crates/spline-test/src/shaders/: global.wgsl  grid.wgsl  handles.wgsl  mod.rs  spiral_test.wgsl  spline_plot.wgsl
crates/spline-test/src/util/: mod.rs  resize.rs
html/: pointerevent-test.html  pointerevent-wasm.html  spline-test.html
html/pkg/: spline_test.js  spline_test_bg.wasm
