[package]
name = "spline-test"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
clothoid.path = "../clothoid"

bytemuck.workspace = true
glam.workspace = true
log.workspace=true
wgpu.workspace = true
image = "0.25.9"
nanopre = "0.1.2"
winit = "0.30.12"
rc-zip-sync = {version = "4.4.2", default-features = false, features=["deflate"]}
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = {version = "0.3.90", features = [
    "Document",
    "Window",
    "Element",
    "PointerEvent",
    "HtmlCanvasElement",
    "ResizeObserver"
]}
getrandom = {version = "0.4.1", features = ["wasm_js"]}
half = {version = "2.7.1", features=["bytemuck"]}
leptos = {version = "0.8.17", features=["csr"]}
clone_all = "0.1.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.64"
